Fix spacing and number background color

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -63,7 +63,7 @@
     border-radius: $rounded-full;
     position: relative;
     transform: translateY(-50%);
-    background-color: $clr-white;
+    background-color: $clr-neutral-100;
     font-weight: $fw-900;
     color: $clr-neutral-400;
     margin-bottom: 2rem;
