--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -199,8 +199,9 @@ h6 {
     margin-top: 1.5rem;
 
     @media screen and (min-width: 30em) {
-      margin-top: 1.3rem;
-      letter-spacing: 0.01em;
+      max-width: 16ch;
+      margin-top: 1rem;
+      // letter-spacing: 0.01em;
     }
   }
 
@@ -210,11 +211,11 @@ h6 {
     margin-inline: auto;
     line-height: 1.625rem;
     color: $clr-neutral-400;
-    margin-top: 1.88rem;
+    margin-top: 1.9rem;
 
     @media screen and (min-width: 48em) {
       max-width: 43ch;
-      letter-spacing: 0.01em;
+      font-weight: 500;
     }
   }
 }
